<?xml version="1.0"?>
<package format="2">
  <name>corner_event_detector</name>
  <version>0.0.0</version>
  <description>The corner_event_detector package</description>
  <maintainer email="mueggler@ifi.uzh.ch">Elias Mueggler</maintainer>
  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>dvs_msgs</depend>
  <depend>eigen_catkin</depend>

  <export>

  </export>
</package>
